--- a/shop.yml
+++ b/shop.yml
@@ -1,3 +1,3 @@
 data:
-  SECRET_KEY: aaaaaaaaaaaaaaaa5123asdsadsadsadadsadsasadsadsadsad
+  SECRET_KEY: 2321122b21bb14dsgsdgds
   test: shop-default
